fix: horizontal scroll integration with second section

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@
 }
 body{
   background-color: black;
-  /* overflow-x: hidden; */
+  overflow-x: scroll;
 }
 ::-webkit-scrollbar{
   display: none;
+}
+.main{
+  display: flex;
+  width: auto;
+  height: auto;
+  
 }
