--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,10 +1,11 @@
 .hero{
     width: 100vw;
-    height: 1200vh;
+    height: 100vh;
+    display: flex;
 }
 .hero__container{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding-inline: 10rem;
     z-index: 9999;
     position: relative;
@@ -32,7 +33,7 @@
     display: flex;
    margin-top: 4rem;
     align-items: center;
-    width: 400vw;
+    /* width: 400vw; */
     will-change: transform;
 }
 .main__hero{
